--- a/portfolio.html
+++ b/portfolio.html
@@ -23,25 +23,25 @@
   <body>
     <header class="box">
       <div class="page-header container"> 
-      <a href="/goit-markup-hw-07/index.html" class="logo"><span class="logo-blue"> Web</span>Studio</a>
-      <nav class="navigation">
-        <ul class="item">
-          <li><a href="/goit-markup-hw-07/index.html" class="agency">Agencja</a></li>
-          <li><a href="#" class="portfolio-active">Portfolio </a></li>
-          <li><a href="#" class="navigation-theme">Kontakt</a></li>
+      <a href="/goit-markup-hw-07/index.html" class="logo"><span class="logo__blue"> Web</span>Studio</a>
+      <nav>
+        <ul class="nav">
+          <li><a href="/goit-markup-hw-07/index.html" class="nav__agency">Agencja</a></li>
+          <li><a href="#" class="nav__portfolio--active">Portfolio </a></li>
+          <li><a href="#" class="nav__contact">Kontakt</a></li>
         </ul>
       </nav>
-      <ul class="contacts-position">
-        <li><a href="mailto:info@devstudio.com" class="contacts">
-          <svg class="envelope">
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com" class="contacts__link">
+          <svg class="contacts__svg" width="16px" height="12px">
           <use
           href="/goit-markup-hw-04/images/icons.svg#icon-envelope">
           </use>
         </svg>info@devstudio.com 
       </a>
     </li>
-        <li><a href="tel:48111111111" class="contacts">
-          <svg class="smartphone">
+        <li><a href="tel:48111111111" class="contacts__link">
+          <svg class="contacts__svg" width="10px" height="16px">
             <use
             href="/goit-markup-hw-04/images/icons.svg#icon-smartphone">
 
@@ -49,186 +49,186 @@
           </svg>+48 111 111 111</a></li>
       </ul>
       </div>
-    <main class="container section">
+    <main class="container main-portfolio">
       <!--HEADER-->
-      <ul class="selector-position">
+      <ul class="buttons">
         <li>
-          <button type="button" class="selector">Wszystkie</button>
+          <button type="button" class="buttons__selector">Wszystkie</button>
         </li>
         <li>
-          <button type="button" class="selector">Strony</button>
+          <button type="button" class="buttons__selector">Strony</button>
         </li>
         <li>
-          <button type="button" class="selector">Aplikacje</button>
+          <button type="button" class="buttons__selector">Aplikacje</button>
         </li>
         <li>
-          <button type="button" class="selector">Dizajn</button>
+          <button type="button" class="buttons__selector">Dizajn</button>
         </li>
         <li>
-          <button type="button" class="selector">Marketing</button>
+          <button type="button" class="buttons__selector">Marketing</button>
         </li>
       </ul>
-      <ul class="collection section">
-        <li class="collection-theme">
-          <div class="img-description">
+      <ul class="gallery">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-02/images/colletion/notebook.jpg"
             alt="notebook"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Technocrack</p>
-            <p class="description">Strona internetowa</p>
+          <div class="gallery__name">
+            <p class="gallery__title">Technocrack</p>
+            <p class="gallery__subtitle">Strona internetowa</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-03/images/colletion/basketballPlayers.jpg"
             alt="basketball players"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Grafika New Orlean vs Golden Star</p>
-            <p class="description">Dizajn</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Grafika New Orlean vs Golden Star</p>
+            <p class="gallery__subtitle">Dizajn</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-03/images/colletion/logoSeaFood.jpg"
             alt=" logo seafood"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Restauracja Seafood</p>
-            <p class="description">Aplikacja</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Restauracja Seafood</p>
+            <p class="gallery__subtitle">Aplikacja</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-03/images/colletion/headPhones.jpg"
             alt="headphones"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Projekt Prime</p>
-            <p class="description">Marketing</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Projekt Prime</p>
+            <p class="gallery__subtitle">Marketing</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-02/images/colletion/boxes.jpg"
             alt="boxes"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Projekt Boxes</p>
-            <p class="description">Aplikacja</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Projekt Boxes</p>
+            <p class="gallery__subtitle">Aplikacja</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-02/images/colletion/monitor.jpg"
             alt="monitor"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Inspiration has no Borders</p>
-            <p class="description">Strona internetowa</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Inspiration has no Borders</p>
+            <p class="gallery__subtitle">Strona internetowa</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-02/images/colletion/newspaper.jpg"
             alt="newspeaper"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Magazyn Limited Edition</p>
-            <p class="description">Dizajn</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Magazyn Limited Edition</p>
+            <p class="gallery__subtitle">Dizajn</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-02/images/colletion/pendant.jpg"
             alt="pendant"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Projekt LAB</p>
-            <p class="description">Marketing</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Projekt LAB</p>
+            <p class="gallery__subtitle">Marketing</p>
           </div>
         </li>
-        <li class="collection-theme">
-          <div class="img-description">
+        <li class="gallery__item">
+          <div class="gallery__description">
           <img
             src="/goit-markup-hw-02/images/colletion/laptop.jpg"
             alt="laptop"
             width="370"
             height="294"
           />
-          <p class="img-description-theme">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <p class="gallery__content">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
           </div>
-          <div class="collection-name">
-            <p class="thing">Growing Business</p>
-            <p class="description">Aplikacja</p>
+          <div class="gallery__name">
+            <p class="gallery__tittle">Growing Business</p>
+            <p class="gallery__subtitle">Aplikacja</p>
           </div>
         </li>
       </ul>
     </main>
-    <footer class="footer-theme box">
+    <footer class="footer box">
       <div class="container">
       <a href="#" class="logo">
-        <span class="logo-blue">Web</span><span class="logo-white">Studio</span>
+        <span class="logo__blue">Web</span><span class="logo__white">Studio</span>
       </a>
-      <div class="address-sm-position">
+      <div class="footer__address">
       <address>
         <div class="address">
-      <a href="https://goo.gl/maps/2BxjCc9wwXKKJrFt8" class="footer" target="_blank"
+      <a href="https://goo.gl/maps/2BxjCc9wwXKKJrFt8" class="address__link" target="_blank"
         >m. Warszawa, Aleje Jerozolimskie 21
       </a>
-      <a href="mailto:info@example.com" class="footer-contact">info@example.com
+      <a href="mailto:info@example.com" class="address__contact">info@example.com
       </a>
-      <a href="tel:+48111111111" class="footer-contact">
+      <a href="tel:+48111111111" class="address__contact">
         +48 111 111 111
       </a>   
         </div>
       </address>
-      <div class="footer-social-media">
-        <h5 class="heading5">DOŁĄCZ DO NAS</h5>
-        <ul class="social-media-svg">
+      <div class="footer__social-media">
+        <h5 class="footer__heading5">DOŁĄCZ DO NAS</h5>
+        <ul class="footer__list">
           <li>
-        <a href="#" class="social-media-them">
+        <a href="#" class="footer__svg">
         <svg height="auto" width="20">
           <use
           href="/goit-markup-hw-04/images/icons.svg#icon-instagram-2">
@@ -237,7 +237,7 @@
         </a> 
           </li>
           <li>
-        <a href="#" class="social-media-them" >
+        <a href="#" class="footer__svg" >
         <svg height="auto" width="20">
             <use
             href="/goit-markup-hw-04/images/icons.svg#icon-twitter-1">
@@ -246,7 +246,7 @@
         </a>
           </li>
           <li>
-        <a href="#" class="social-media-them">
+        <a href="#" class="footer__svg">
           <svg height="auto" width="20">
               <use
               href="/goit-markup-hw-04/images/icons.svg#icon-facebook-1">
@@ -255,7 +255,7 @@
         </a>
           </li>
           <li>
-        <a href="#" class="social-media-them">
+        <a href="#" class="footer__svg">
             <svg height="auto" width="20">
                 <use
                 href="/goit-markup-hw-04/images/icons.svg#icon-linkedin-1">
@@ -265,22 +265,21 @@
           </li>
         </ul>
       </div>
-      <div class="newsletter-position">
-        <h5 class="heading5" class="sign-up-name">ZAPISZ SIĘ DO NEWSLETTERA</h5>
-        <form name="sign-up-form" autocomplete="on" class="sign-up-position">
+      <div class="footer__newsletter">
+        <h5 class="footer__heading5">ZAPISZ SIĘ DO NEWSLETTERA</h5>
+        <form class="footer__input">
           <label>
-            <input required name="sign-up-form" class="email-footer-position" type="email" placeholder="E-mail" />
+            <input required name="sign-up-form" class="footer__input--email" type="email" placeholder="E-mail" />
           </label>
-          <button type="submit" class="sign-up">ZAPISZ SIĘ</button>
+          <button type="submit" class="footer__button" >ZAPISZ SIĘ</button>
         </form>
       </div>
-      <div class="footer-icon-send">
-        <svg class="icons-h2" width="24px" height="24px">
-          <use class="footer-icon-send"
+      <div class="footer__icon">
+        <svg width="24px" height="24px">
+          <use
           href="/goit-markup-hw-06/images/icons.svg#icon-icon-send">
           </use>
         </svg>
-      </div>
       </div>
       </div>
       </div>
