--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </ul>
       </div>
       <!--WHAT WE DO-->
-      <section class="services-position">
+      <section class="services">
         <h3 class="heading3">Czym się zajmujemy</h3>
         <div>
           <ul class="services__list">
