--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link class="link" rel="stylesheet" href="/goit-markup-hw-07/css/styles.css" />
+    <link class="link" rel="stylesheet" href="/goit-markup-hw-07/css/main.min.css" />
+    <link class="link" rel="stylesheet" href="/goit-markup-hw-07/css/main.min.css.map"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -124,7 +125,7 @@
       </div>
       <!--WHAT WE DO-->
       <section class="services">
-        <h3 class="heading3">Czym się zajmujemy</h3>
+        <h3 class="services__heading3">Czym się zajmujemy</h3>
         <div>
           <ul class="services__list">
             <li>
@@ -372,7 +373,7 @@
       </section>
       <section class="container">
         <div>
-        <h3 class="clients">Nasi klienci</h3>
+        <h3 class="client">Nasi klienci</h3>
         <ul class="client__list">
           <li>
             <a href="#" class="client__link">
@@ -548,7 +549,7 @@
         </label>
         </div>
         <div  class="modal__box">
-            <label for="comment" class="comment" name="comment">
+            <label for="comment" class="modal__comment" name="comment">
               Komentarz
             </label>
               <input rows="5" cols="50" name="comment" placeholder="Wprowadź tekst" id="comment" required type="text" class="modal__input-comment"></textarea>
