--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link class="link" rel="stylesheet" href="/goit-markup-hw-07/css/styles.css" />
+    <link class="link" rel="stylesheet" href="/goit-markup-hw-07/css/main.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
